fix: improve projects carousel navigation layout on small screens

--- a/home/project.css
+++ b/home/project.css
@@ -94,7 +94,7 @@
 
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   
   #projects .carousel.shell {
     padding: 0px 30px;
@@ -110,6 +110,26 @@
 
 }
 
+@media (max-width: 600px) {
+  #projects .skills-card {
+    padding-bottom: 20px;
+}
+
+  #projects .carousel.shell {
+    padding: 0px;
+  }
+
+
+  #projects .nav-round {
+  top: 450px;
+  left: 50px;
+}
+  #projects .nav-round.left {
+    left: 0px;
+}
+
+}
+
 @media (max-width: 500px) {
   #projects p {
     font-size: 0.95rem;
@@ -117,17 +137,31 @@
   }
 
   #projects .carousel.shell {
-    padding: 0px 40px;
+    padding: 0px 10px;
   }
 
-   #projects .nav-round.left {
-  left: -5px;
+  #projects .nav-round {
+    left: 60px;
 }
 
-#projects .nav-round.right {
-  right: -5px;
+  #projects .nav-round.left {
+  left: 10px;
 }
 
+}
 
+@media (max-width: 356px) { 
+ #projects .carousel.shell {
+    padding: 0px;
+  } 
+
+  
+  #projects .nav-round {
+    left: 50px;
+}
+
+  #projects .nav-round.left {
+  left: 0px;
+}
 }
 
